# Laboratorio_

./: CMakeLists.txt  FileIni.cpp  FileIni.h  Print.cpp  Print.h  main.cpp
test/: CMakeLists.txt  runAllTest.cpp  test.cpp
